...
                    }
                },
                actions = {
                    // QR Code Scanner Entry Icon
                    IconButton(
                        onClick = { qrScannerViewModel.openScanner() },
                        modifier = Modifier.testTag("app_bar_qr_scan_button")
                    ) {
                        Icon(
                            imageVector = LucideIcons.QrCode,
                            contentDescription = stringResource(R.string.qr_scanner_title),
                            tint = MaterialTheme.colorScheme.onSurface
                        )
...
